# AutonomousSearchAndRescueVehicle

./: .gitignore  README.md
Tutorial/bag_files/rosbag2_2021_07_30-12_54_32/: metadata.yaml  rosbag2_2021_07_30-12_54_32_0.db3
Tutorial/dev/install/: local_setup.sh  setup.sh
Tutorial/dev/install/cpp_parameters/lib/cpp_parameters/: parameter_node
Tutorial/dev/install/cpp_parameters/share/cpp_parameters/: package.sh
Tutorial/dev/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
Tutorial/dev/install/cpp_pubsub/share/cpp_pubsub/: package.sh
Tutorial/dev/install/cpp_srvcli/lib/cpp_srvcli/: client  server  service
Tutorial/dev/install/cpp_srvcli/share/cpp_srvcli/: package.sh
Tutorial/dev/install/more_interfaces/lib/more_interfaces/: publish_address_book
Tutorial/dev/install/more_interfaces/share/more_interfaces/: package.sh
Tutorial/dev/install/my_cmake_package/lib/my_cmake_package/: my_cpp_node
Tutorial/dev/install/my_cmake_package/share/my_cmake_package/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml  package.zsh
Tutorial/dev/install/my_pypackage/lib/my_pypackage/: my_pynode
Tutorial/dev/install/my_pypackage/share/my_pypackage/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Tutorial/dev/install/py_pubsub/share/py_pubsub/: package.sh  package.xml
Tutorial/dev/install/py_srvcli/share/py_srvcli/: package.sh  package.xml
Tutorial/dev/install/python_parameters/lib/python_parameters/: param_talker
Tutorial/dev/install/python_parameters/share/python_parameters/: package.sh  (+1 more)
Tutorial/dev/log/: latest_build
Tutorial/dev/src/cpp_parameters/: CMakeLists.txt  package.xml
Tutorial/dev/src/cpp_parameters/launch/: cpp_parameters_launch.py
Tutorial/dev/src/cpp_parameters/src/: cpp_parameters_node.cpp
Tutorial/dev/src/cpp_pubsub/: CMakeLists.txt  package.xml
Tutorial/dev/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
Tutorial/dev/src/cpp_srvcli/: CMakeLists.txt
Tutorial/dev/src/cpp_srvcli/src/: add_three_ints_client.cpp  add_three_ints_server.cpp  add_two_ints_client.cpp  add_two_ints_server.cpp
Tutorial/dev/src/more_interfaces/: CMakeLists.txt  package.xml
Tutorial/dev/src/more_interfaces/src/: publish_address_book.cpp
Tutorial/dev/src/my_cmake_package/: CMakeLists.txt  package.xml
Tutorial/dev/src/my_pypackage/: package.xml  setup.cfg  setup.py
Tutorial/dev/src/my_pypackage/my_pypackage/: my_pynode.py
Tutorial/dev/src/py_pubsub/: package.xml  setup.py
Tutorial/dev/src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
Tutorial/dev/src/py_srvcli/: package.xml  setup.py
Tutorial/dev/src/py_srvcli/py_srvcli/: client_member_function.py
Tutorial/dev/src/python_parameters/: package.xml  setup.py
Tutorial/dev/src/python_parameters/python_parameters/: python_parameters_node.py
Tutorial/dev/src/tutorial_interfaces/: CMakeLists.txt  package.xml
Tutorial/launch/: turtlesim_mimic_launch.py
dev/install/: local_setup.sh  setup.sh
dev/install/hardware-control/share/hardware-control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dev/install/motion/lib/motion/: motion_pub
dev/install/motion/share/motion/: local_setup.sh  package.ps1  package.sh  package.xml
dev/install/path-planning/share/path-planning/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dev/install/path_planning/lib/path_planning/: listener
dev/install/path_planning/share/path_planning/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
dev/install/vision/lib/vision/: talker
dev/install/vision/share/vision/: local_setup.sh  package.sh
dev/launch/: turtlesim_motion_launch.py
dev/src/: Golfball.hpp  helpers.hpp
dev/src/bringup/: package.xml  setup.cfg  setup.py
dev/src/bringup/bringup/: controller.launch.py  functions.py  spawn_demo.py
dev/src/bringup/gazebo/worlds/: empty.world
dev/src/bringup/launch/: controller.launch.py  gazebosim.launch.py
dev/src/custom_interfaces/: CMakeLists.txt  package.xml
dev/src/custom_interfaces/msg/: ImageData.msg  ManualControl.msg  ThresholdAdjustment.msg
dev/src/custom_interfaces/srv/: SendGolfBallPoses.srv  TransferGolfballLocations.srv
dev/src/hardware/: CMakeLists.txt  package.xml
dev/src/hardware/src/: controller.cpp
dev/src/helpers/: filepaths.py  package.xml  setup.py
dev/src/helpers/helpers/: filepaths.py
dev/src/joy_linux/: CMakeLists.txt
dev/src/manual_control/: CMakeLists.txt  package.xml  setup.py
dev/src/manual_control/inputs/: inputs.py
dev/src/manual_control/manual_control/: joystick_handler.py
dev/src/manual_control/src/: manual_control.cpp
dev/src/motion/: CMakeLists.txt  package.xml
dev/src/motion/src/: arduino_controller.py  controller.cpp  joy_linux_node.cpp  manual_control.cpp  motion.cpp  motion.hpp  navigation.cpp
dev/src/path_planning/: CMakeLists.txt  package.xml
dev/src/path_planning/src/PathPlanning/: path-planning.cpp  path-planning.hpp
dev/src/simulation/: package.xml  setup.py
dev/src/simulation/launch/: gazebosim.launch.py
dev/src/simulation/simulation/: filepaths.py  remove_golfballs.py  spawn_demo.py
dev/src/vision/: CMakeLists.txt  package.xml
dev/src/vision/src/: camera_driver.cpp  image_processing.cpp
dev/src/vision/src/ImageProcessing/: image-processing.cpp  image-processing.hpp
gazebo/models/Border/: model.config  model.sdf
gazebo/models/DropOffTape/: model.sdf
gazebo/models/GolfBall/: model.sdf
gazebo/models/border/: model.config  model.sdf
gazebo/models/construction_cone/: model.sdf
gazebo/models/dropoff_tape/: model.config  model.sdf
gazebo/models/golfball/: model.config  model.sdf
gazebo/models/grass_plane/: model.config  model.sdf
gazebo/models/grass_plane/materials/scripts/: grass.material
gazebo/models/grass_plane/materials/textures/: CMakeLists.txt
gazebo/models/turtlebot3_waffle/: model.sdf
gazebo/worlds/: golfball_field.world
(+14 files in other folders)
